# kbx-public

./: README.md  evaluate.py  pyproject.toml
evaluation/families2persons/: example.family  example.person  families-to-persons.k
evaluation/hcsp2uml/: example-100.hcsp  example-1000.hcsp  example.hcsp  example.plantuml  hcsp-to-sequence.k
kbx/: __main__.py  generator.py  kompile.py  outer.py  prelude.py  pretty_sugar.py  synchronizer_template.py  utils.py
